src/bp-core/admin/sass/common.scss
/* ... */
/* Integrations - AppBoss */
.bp-admin-card.section-bp_appboss-integration h2:before {
	background-image: url(../../images/admin/icons/logos/appboss.png);
	background-size: 100% 100%;
}

/* Integrations - LearnDash */
.bp-admin-card.section-bp_ld-integration h2:before,
.bp-admin-card.section-bp_ld_sync-buddypress h2:before,
.bp-admin-card.section-bp_ld_sync-learndash h2:before,
.bp-admin-card.section-bp_ld_sync-reports h2:before,
.bp-admin-card.section-bp_ld_course_tab-buddypress h2:before {
	background-image: url(../../images/admin/icons/logos/learndash.png);
	background-size: 100% 100%;
}

/* Integrations - MemberPress */
.bp-admin-card.section-bp-memberpress-integration h2:before {
	background-image: url(../../images/admin/icons/logos/memberpress.png);
	background-size: 100% 100%;
}

/* Integrations - WooCommerce */
.bp-admin-card.section-bp-woocommerce-integration h2:before {
	background-image: url(../../images/admin/icons/logos/woocommerce.png);
	background-size: 100% 100%;
}

/* Integrations - BuddyPress Plugins */
.bp-admin-card.section-bp_compatibility-integration h2:before {
	background-image: url(../../images/admin/icons/logos/buddypress.png);
	background-size: 100% 100%;
}

/*
 * 2.7 Document Extensions
 */

.section-bp_document_settings_extensions table.form-table tbody tr.document-extensions-listing {

	th {
		display: none;
	}

	td table.extension-listing thead tr th {
		display: table-cell;
	}

	> td {
		padding: 0;
	}
}

table.extension-listing {
	border-radius: 4px;
	margin: 9px 0 12px;

	thead th {
		padding: 12px 18px;

		&.ext-head-extension {
			width: 2.5em;
		}

		&.ext-head-desc {
			width: 16%;
		}

		&.ext-head-icon {
			width: 14%;
		}
	}

	thead td.ext-head-enable {
		width: 1.2em;
	}

	tbody td {
		padding: 10px;

		i.bb-icon {
			font-size: 33px;
			color: #999;
			margin-left: 8px;
			vertical-align: middle;
		}

		input.error {
			border: 1px solid #f00;
		}

		input.hide-border {
			border: none;
			background-color: transparent;
			color: #555;
			margin: 0;

			&:focus {
				background-color: #eee;
			}
		}

		input[type="text"] {
			width: 100%;
		}

		#btn-remove-extensions {
			cursor: pointer;
			color: #a00;
			font-size: 18px;
			vertical-align: middle;
			margin-left: 6px;
		}
	}

	tbody tr.custom-extension td input.extension-mime[type="text"] {
		width: 50%;
	}

	tfoot td {

		#btn-add-extensions,
		#btn-check-mime-type {
			cursor: pointer;
			float: right;
			margin-left: 8px;
		}
	}


	@media screen and (max-width: 782px) {
		display: block;

		tbody,
		thead,
		tr {
			display: block;
			width: 100%;

			&.extra-extension {

				input[type="text"] {
					margin-top: 15px;
					margin-left: 10px;
					width: calc(100% - 10px);
				}

				.icon-select-main {
					margin-left: 10px;
				}
			}
		}

		tr.custom-extension {
			background-color: #fff;

			td {
				padding-left: 20px !important;
			}
		}

		tfoot {
			width: 100%;
			display: inline-block;
			box-sizing: border-box;

			td #btn-add-extensions {
				margin: 10px 0 15px;
			}

		}

		thead .ext-head:not(.ext-head-enable) {
			display: none !important;
		}

		.ext-head.ext-head-enable {
			width: 100% !important;
			padding: 10px 0 0 10px !important;
		}

		tbody {

			td {
				padding-left: 10px !important;
				width: 100% !important;
				box-sizing: border-box;

				> i {
					margin: 15px 0 10px 10px;
				}

				&:before {
					top: 0;
					left: 20px !important;
					font-weight: 600;
				}

				&:first-child {
					padding-left: 20px !important;
				}

				.extension-mime {
					margin-bottom: 15px;
				}

				.btn-check-mime-type {
					margin-left: 10px;
				}
			}
		}

	}

	select.extension-icon {
		display: none;
	}

	.icon-select-main {
		position: relative;
		display: inline-block;
		vertical-align: middle;
		width: calc(100% - 50px);

		.icon-select-button {
			font-size: 14px;
			line-height: 2;
			color: #32373c;
			border: 1px solid #7e8993;
			border-width: 1px;
			box-shadow: none;
			border-radius: 3px;
			padding: 3px 24px 3px 8px;
			-webkit-appearance: none;
			background: #fff url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M5%206l5%205%205-5%202%201-7%207-7-7%202-1z%22%20fill%3D%22%23555%22%2F%3E%3C%2Fsvg%3E) no-repeat right 5px top 55%;
			background-size: 16px 16px;
			cursor: pointer;
			vertical-align: middle;
			max-width: 100%;
			width: 100%;
			display: inline-block;
			box-sizing: border-box;

			li {
				list-style: none;
				margin: 0;
				line-height: 20px;
				white-space: nowrap;
				max-width: 100%;
				overflow: hidden;
				text-overflow: ellipsis;
				text-align: left;
				color: #555;
			}

			i {
				font-size: 22px;
				color: #888;
				margin-right: 10px;
				vertical-align: middle;
			}
		}

		.custom-extension-list {
			position: absolute;
			left: 0;
			right: 0;
			min-width: 160px;
			background-color: #fff;
			border: 1px solid #ccd0d4;
			border-radius: 3px;
			box-shadow: 0 2px 12px 1px rgba(0, 0, 0, 0.1);
			padding: 0;
			bottom: 100%;
			max-height: 60vh;
			overflow: auto;
			display: none;

			ul.custom-extension-list-select {
				font-size: 0;
				color: #888;
			}

			li {
				list-style: none;
				cursor: pointer;
				font-size: 14px;
				padding: 8px 12px;
				margin: 0;

				&:first-child {
					border-bottom: 1px solid #eee;
					padding-top: 10px;
					padding-bottom: 10px;
				}

				&:nth-child(2) {
					padding-top: 10px;
				}

				&:last-child {
					padding-bottom: 10px;
				}

				&:hover {
					background-color: #f9f9f9;
				}

				span {
					vertical-align: middle;
				}
			}

			i {
				font-size: 28px;
				margin-right: 10px;
				vertical-align: middle;
				color: #888;
			}
		}
	}

}

@media screen and (max-width: 1023px) {

	#bp-hello-container.bp-hello-mime {
		bottom: 0;

		.bp-hello-header {
			height: auto;
			max-height: initial;
			min-height: 58px;
		}
	}
}
/* ... */

